Service Login/Kubernetes/service-login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-login-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-login
  template:
    metadata:
      labels:
        app: service-login
    spec:
      containers:
        - name: service-login
          image: ghcr.io/brewing-stand/service-login:master
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
