Service Login/Kubernetes/service-login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-login-service
spec:
  selector:
    app: service-login
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
