Service Login/Kubernetes/service-login-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-route
  namespace: brewingstand
  annotations:
    konghq.com/strip-path: 'false'
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-login-service
                port:
                  number: 8080
